# AI_ATS_Optimizer

./: .gitignore  README.md  dev.bat  pyproject.toml  test_history_storage.py
project/backend/: requirements.txt  users_db.json
project/backend/app/: config.py  db.py  main.py  supabase_client.py
project/backend/app/routers/: applications.py  ats.py  auth.py  exporter.py  resume.py
project/backend/app/schemas/: application_schema.py  ats_schema.py  json_resume_schema.py  resume_schema.py
project/backend/app/utils/: gemini_client.py  hf_client.py  layout_extractor.py
project/frontend/src/app/: globals.css  layout.tsx  page.tsx
project/frontend/src/app/ats-optimizer/: page.tsx
project/frontend/src/app/auth/callback/: page.tsx
project/frontend/src/app/dashboard/: page.tsx
project/frontend/src/app/login/: page.tsx
project/frontend/src/app/profile-setup/: page.tsx
project/frontend/src/app/resume-preview/: page.tsx
project/frontend/src/app/resume-upload/: page.tsx
