[project]
name = "ai-resume-maker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt>=5.0.0",
    "easyocr>=1.7.2",
    "email-validator>=2.3.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "openai>=2.41.0",
    "pdf2image>=1.17.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "pypdf>=6.12.2",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.31",
    "supabase>=2.31.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "transformers>=5.10.2",
    "uvicorn>=0.49.0",
]
